[project]
name = "replaymarketdata"
version = "0.1.0"
description = "A Python Library To Replay Market Data Over Websocket"
authors = [
    { name = "Dr June Moone", email = "96371033+MooneDrJune@users.noreply.github.com" },
]
dependencies = [
    "uvloop>=0.19.0",
    "websockets>=12.0",
    "aiohttp[speedups]>=3.9.3",
    "orjson>=3.9.15",
    "kiteconnect>=5.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.3.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/replaymarketdata"]
